--- a/about-me.html
+++ b/about-me.html
@@ -144,7 +144,7 @@
               </figure>
 
               <figure>
-                <img src="Images/YUCCA De Luxe zöld mű jukka pálma 160 cm.jpeg" alt="Yucca Palm">
+                <img src="Images/YUCCA De Luxe zöld mű jukka pálma 160 cm.jpeg" alt="Yucca Palm">
                 <figcaption>Yucca Palm</figcaption>
               </figure>
             </div>
